redwine-server/redwine-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winedeploy
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: wineimage
          image: redwineflask:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: redwine-service
spec:
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: web
