redwine-server/redwine-azure-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winedeploy
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: wineimage
          image: agwineacr.azurecr.io/redwineflask:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: redwine-service
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: redwine-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  
  - http:
      paths:
      - backend:
          serviceName: redwine-service
          servicePort: 5000
        path: /
