redwine-server/redwine-eks-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winedeploy
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: wineimage
          image: 113170463366.dkr.ecr.us-east-1.amazonaws.com/redwine-repo:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: redwine-service
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redwine-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: redwine-service
            servicePort: 5000
